# src/ExampleAPI_Thrift/models/person.go
@@ -5,7 +5,6 @@ import (
 	"context"
 	"fmt"
 	"log"
-	"os"
 	"time"
 
 	"github.com/apache/thrift/lib/go/thrift"
@@ -54,7 +53,7 @@ func (p *PersonClient) GetItemsAll() (*myGeneric.TPeronSetResult_, error) {
 
 	result, err := client.GetItemsPerson(ctx, BS_PERSON)
 	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
+
 		return nil, err
 	}
 	return result, nil
@@ -71,7 +70,7 @@ func (p *PersonClient) GetItemsPagination(offset int32, limit int32) (*myGeneric
 
 	result, err := client.GetPersonsPagination(ctx, BS_PERSON, offset, limit)
 	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
+
 		return nil, err
 	}
 	return result, nil
@@ -104,7 +103,24 @@ func (p *PersonClient) GetPersonsOfTeam(teamId string) (*myGeneric.TPeronSetResu
 
 	result, err := client.GetPersonsOfTeam(ctx, teamId)
 	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
+
+		return nil, err
+	}
+	return result, nil
+}
+
+func (p *PersonClient) GetPersonOfTeamPagination(offset int32, limit int32) (*myGeneric.TPeronSetResult_, error) {
+
+	p.InitSocket()
+	defer p.Transport.Close()
+	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+	defer cancel()
+
+	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
+
+	result, err := client.GetPersonsOfTeamPagination(ctx, BS_PERSON, offset, limit)
+	if err != nil {
+
 		return nil, err
 	}
 	return result, nil
@@ -120,7 +136,6 @@ func (p *PersonClient) GetItemById(id string) (*myGeneric.TPersonResult_, error)
 	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
 	result, err := client.GetItemPerson(ctx, BS_PERSON, id)
 	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
 		return nil, err
 	}
 	return result, nil
@@ -134,55 +149,61 @@ func (p *PersonClient) PutItem(item *myGeneric.TPerson) error {
 	defer cancel()
 
 	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
-	err := client.PutItemPerson(ctx, BS_PERSON, item)
+
+	_, err := client.GetItemTeam(ctx, BS_TEAM, item.GetTeamId())
 	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
 		return err
+	} else {
+		err := client.PutItemPerson(ctx, BS_PERSON, item)
+		if err != nil {
+			return err
+		}
 	}
+
 	return nil
 }
 
-func (p *PersonClient) PutPersonIsTeam(personId string, teamId string) error {
+// func (p *PersonClient) PutPersonIsTeam(personId string, teamId string) error {
 
-	p.InitSocket()
-	defer p.Transport.Close()
-	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
+// 	p.InitSocket()
+// 	defer p.Transport.Close()
+// 	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+// 	defer cancel()
 
-	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
+// 	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
 
-	//check team exist in bigset
-	ok, err := client.ItemIsExist(ctx, BS_TEAM, teamId)
-	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
-		return err
-	}
-	if ok {
-		// check person exist
-		ok2, err := client.ItemIsExist(ctx, BS_PERSON, personId)
-		if err != nil {
-			fmt.Fprintln(os.Stderr, "bigset error", err)
-			return err
-		}
-		if ok2 {
-			// thêm / cập nhật team cho person
-			err := client.PutPersonIsTeam(ctx, personId, teamId)
-			if err != nil {
-				fmt.Fprintln(os.Stderr, "bigset error", err)
-				return err
-			}
-			// thêm / cập nhật person vào team
-			err = client.PutPersonToTeam(ctx, teamId, personId)
-			if err != nil {
-				fmt.Fprintln(os.Stderr, "bigset error", err)
-				return err
-			}
-			return nil
-		}
-		return fmt.Errorf("person is not exist")
-	}
-	return fmt.Errorf("team is not exist")
-}
+// 	//check team exist in bigset
+// 	ok, err := client.ItemIsExist(ctx, BS_TEAM, teamId)
+// 	if err != nil {
+//
+// 		return err
+// 	}
+// 	if ok {
+// 		// check person exist
+// 		ok2, err := client.ItemIsExist(ctx, BS_PERSON, personId)
+// 		if err != nil {
+//
+// 			return err
+// 		}
+// 		if ok2 {
+// 			// thêm / cập nhật team cho person
+// 			err := client.PutPersonIsTeam(ctx, personId, teamId)
+// 			if err != nil {
+//
+// 				return err
+// 			}
+// 			// thêm / cập nhật person vào team
+// 			err = client.PutPersonToTeam(ctx, teamId, personId)
+// 			if err != nil {
+//
+// 				return err
+// 			}
+// 			return nil
+// 		}
+// 		return fmt.Errorf("person is not exist")
+// 	}
+// 	return fmt.Errorf("team is not exist")
+// }
 
 func (p *PersonClient) PutPersonToTeam(personId string, teamId string) error {
 
@@ -195,29 +216,20 @@ func (p *PersonClient) PutPersonToTeam(personId string, teamId string) error {
 
 	//check team exist in bigset
 	ok, err := client.ItemIsExist(ctx, BS_TEAM, teamId)
-	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
+	if err != nil || !ok {
 		return err
 	}
 	if ok {
+		// check person exist in bigset
 		ok2, err := client.ItemIsExist(ctx, BS_PERSON, personId)
 		if err != nil {
-			fmt.Fprintln(os.Stderr, "bigset error", err)
 			return err
 		}
 		if ok2 {
-
 			// thêm person vào team
 			err := client.PutPersonToTeam(ctx, teamId, personId)
 			if err != nil {
-				fmt.Fprintln(os.Stderr, "bigset error", err)
-				return err
-			}
 
-			// thêm team cho person
-			err = client.PutPersonIsTeam(ctx, personId, teamId)
-			if err != nil {
-				fmt.Fprintln(os.Stderr, "bigset error", err)
 				return err
 			}
 			return nil
@@ -227,45 +239,45 @@ func (p *PersonClient) PutPersonToTeam(personId string, teamId string) error {
 	return fmt.Errorf("team is not exist")
 }
 
-func (p *PersonClient) PutMultiPersonsToTeam(personIds []string, teamId string) error {
+// func (p *PersonClient) PutMultiPersonsToTeam(personIds []string, teamId string) error {
 
-	p.InitSocket()
-	defer p.Transport.Close()
-	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
+// 	p.InitSocket()
+// 	defer p.Transport.Close()
+// 	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+// 	defer cancel()
 
-	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
+// 	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
 
-	//check team exist in bigset
-	ok, err := client.ItemIsExist(ctx, BS_TEAM, teamId)
-	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
-		return err
-	}
-	if ok {
-		for _, v := range personIds {
-			ok2, err := client.ItemIsExist(ctx, BS_PERSON, v)
-			if err != nil || !ok2 {
-				fmt.Fprintln(os.Stderr, "bigset error", err)
-				return err
-			}
-			if ok2 {
-				err := client.PutPersonToTeam(ctx, teamId, v)
-				if err != nil {
-					fmt.Fprintln(os.Stderr, "bigset error", err)
-					return err
-				}
-				err = client.PutPersonIsTeam(ctx, v, teamId)
-				if err != nil {
-					fmt.Fprintln(os.Stderr, "bigset error", err)
-					return err
-				}
-			}
-		}
-		return nil
-	}
-	return fmt.Errorf("%s", "team is not exist")
-}
+// 	//check team exist in bigset
+// 	ok, err := client.ItemIsExist(ctx, BS_TEAM, teamId)
+// 	if err != nil {
+//
+// 		return err
+// 	}
+// 	if ok {
+// 		for _, v := range personIds {
+// 			ok2, err := client.ItemIsExist(ctx, BS_PERSON, v)
+// 			if err != nil || !ok2 {
+//
+// 				return err
+// 			}
+// 			if ok2 {
+// 				err := client.PutPersonToTeam(ctx, teamId, v)
+// 				if err != nil {
+//
+// 					return err
+// 				}
+// 				err = client.PutPersonIsTeam(ctx, v, teamId)
+// 				if err != nil {
+//
+// 					return err
+// 				}
+// 			}
+// 		}
+// 		return nil
+// 	}
+// 	return fmt.Errorf("%s", "team is not exist")
+// }
 
 func (p *PersonClient) RemoveItem(personId string) error {
 
@@ -275,21 +287,19 @@ func (p *PersonClient) RemoveItem(personId string) error {
 	defer cancel()
 
 	client := myGeneric.NewTGenericServiceClientFactory(p.Transport, p.ProtocolFactory)
-	err := client.RemoveItem(ctx, BS_PERSON, personId)
+	//get person
+	person, err := client.GetItemPerson(ctx, BS_PERSON, personId)
 	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
-		return err
-	}
-	//get person's team
-	team, err := client.GetPersonIsTeam(ctx, personId)
-	if err != nil {
-		fmt.Fprintln(os.Stderr, "bigset error", err)
+		log.Println(err)
 	} else {
-		err := client.RemoveItem(ctx, personId, team.GetItem().GetTeamId())
+		err := client.RemoveItem(ctx, BS_PERSON, personId)
 		if err != nil {
-			fmt.Fprintln(os.Stderr, "bigset error", err)
+			return err
+		}
+		err = client.RemoveItem(ctx, person.GetItem().GetTeamId(), personId)
+		if err != nil {
+			log.Printf("can not remove person(%s) in team(%s)", personId, person.GetItem().GetTeamId())
 		}
 	}
-
 	return nil
 }
